# gauge-watcher

./: .env.example  .gitignore  .swiftlint.yml  AGENTS.md  LICENSE  Makefile  README.md  airbnb.swiftformat
.githooks/: pre-commit
server/flow-forecast/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
server/flow-forecast/sdks/FlowForecast/: FlowForecast.podspec  Package.swift  README.md  project.yml
server/flow-forecast/sdks/FlowForecast/.openapi-generator/: FILES
server/flow-forecast/sdks/FlowForecast/Sources/FlowForecast/: APIHelper.swift  APIs.swift  CodableHelper.swift  Configuration.swift  Extensions.swift  JSONDataEncoding.swift  JSONEncodingHelper.swift  Models.swift  OpenISO8601DateFormatter.swift  SynchronizedDictionary.swift  URLSessionImplementations.swift
server/flow-forecast/sdks/FlowForecast/Sources/FlowForecast/APIs/: ForecastAPI.swift  UsgsAPI.swift
server/flow-forecast/sdks/FlowForecast/Sources/FlowForecast/Models/: ForecastDataPoint.swift  HTTPValidationError.swift  USGSFlowForecastRequest.swift  ValidationError.swift  (+1 more)
server/flow-forecast/sdks/FlowForecast/docs/: ForecastAPI.md  ForecastDataPoint.md  USGSFlowForecastRequest.md  UsgsAPI.md  ValidationError.md
server/flow-forecast/src/flow_forecast/: __init__.py  __main__.py  app.py  config.py  utils.py
server/flow-forecast/src/flow_forecast/model/: forecast_result.py  usgs.py
server/flow-forecast/src/flow_forecast/router/: router.py
server/flow-forecast/src/flow_forecast/usgs/: router.py  service.py
server/flow-forecast/tests/: usgs_tests.py
(+232 files in other folders)
