[project]
name = "flow-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "drewalth", email = "16584198+drewalth@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "hypercorn>=0.18.0",
    "pandas>=2.3.3",
    "prophet>=1.2.1",
    "pydantic>=2.12.5",
]

[project.scripts]
flow-forecast = "flow_forecast:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
]
